# lanka_data

./: .gitignore  CLAUDE.md  DataRepos.md  README.code.md  README.datasets.md  README.examples.md  README.help.md  README.md  README.philosophy.md  README.visual.md  TODO.md  pyproject.toml  requirements.txt  run_script.py  setup.py  single.sh  test.sh
analysis/: README.md  a-brief-history-of-admin-regions.md  region-history.md  religion-2012-to-2024.md
examples/: examples.json
latex/: lanka_data.bib  lanka_data.tex
project/: pyproject.toml  requirements.txt  vercel.json
tests/: build_test_data.py  conftest.py  test.sh  test_animation.py  test_annotations.py  test_bivariate_map.py  test_bubblemap.py  test_cache_and_api.py  test_census2024.py  test_census2024_wildcard.py  test_command_constructor.py  test_command_fields.py  test_composite.py  test_composite_parties.py  test_console.py  test_correction.py  test_correlation_dataset.py  test_data_export.py  test_dataset.py  test_dataset_factory.py  test_db.data.json  test_db.py  test_election_quick.py  test_empty_results.py  test_hexmap.py  test_how_registry.py  test_line_chart.py  test_model.py  test_new_charts.py  test_plot_layout.py  test_qrcode.py  test_query.py  test_query_gig2_key.py  test_quick_examples.py  test_region_filter.py  test_region_operators.py  test_region_population_filter.py  test_rivers.py  test_scatter_plot_pair.py  test_squaremap.py  (+12 more)
workflows/: console.py  custom_logging.py  examples_build.py  latex_build.py  oneoff_lg_correction_map.py  random_example.py  readme_build.py  run.py  server.py  (+2 more)
(+1401 files in other folders)
