[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanka_data"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "matplotlib",
    "numpy",
    "pandas",
    "geopandas",
    "shapely",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lanka_data.dataset.custom" = ["*.json"]
