[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanka_data"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "geopandas",
    "shapely",
    "rich>=13.9.4",
    "prompt_toolkit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lanka_data.datasets.dataset.custom" = ["*.json"]
"lanka_data.visual.plot" = ["fonts/*.ttf"]
